<resources>
    <string name="app_name">RusWives</string>
    <string name="ru_male_option">Мужчина</string>
    <string name="ru_female_option">Женщина</string>
    <string name="ru_slender">Стройный</string>
    <string name="ru_about_average">Обычное</string>
    <string name="ru_athletic">Спортивное</string>
    <string name="ru_heavyset">Полное</string>
    <string name="ru_a_few_extra_pounds">Несколько лишних кг</string>
    <string name="ru_stocky">Коренастый</string>
    <string name="ru_asian">Азиатская</string>
    <string name="ru_black_african_descent">Африканская</string>
    <string name="ru_east_indian">Индейская</string>
    <string name="ru_latino_hispanic">Испано-Латинская</string>
    <string name="ru_native_american">Коренно-Американская</string>
    <string name="ru_white_caucasian">Белая</string>
    <string name="ru_other">Другое</string>
    <string name="ru_moderately">Умеренно</string>
    <string name="ru_regularly">Регулярно</string>
    <string name="ru_no_way">Категорически нет</string>
    <string name="ru_occasionally">Время от времени</string>
    <string name="ru_daily">Ежедневно</string>
    <string name="ru_cigar_aficionado">Ценитель сигар</string>
    <string name="ru_yes_but_trying_to_quit">Да, но пробую бросить</string>
    <string name="ru_never_married">Никогда не был женат / замужем</string>
    <string name="ru_currently_separated">В данный момент не вместе</string>
    <string name="ru_divorced">Разведен(а)</string>
    <string name="ru_widow_widower">Вдовец / Вдова</string>
    <string name="ru_no">Нет</string>
    <string name="ru_yes_they_sometimes_live_at_home">Да, иногда живут дома</string>
    <string name="ru_yes_they_live_away_from_home">Да, живут вдали от дома</string>
    <string name="ru_yes_they_live_at_home">Да, живут дома</string>
    <string name="ru_definitely">Определенно</string>
    <string name="ru_someday">Однажды</string>
    <string name="ru_not_sure">Не уверен(а)</string>
    <string name="ru_probably_not">Больше нет, чем да</string>
    <string name="ru_no_but_its_ok_if_partner_has_kids">Нет, но ОК если у партнера есть</string>
    <string name="ru_only_with_friends">Только с друзьями</string>
    <string name="ru_default">Нет значения</string>
    <string name="ru_image">Фото</string>
    <string name="ru_name_text">Имя</string>
    <string name="ru_age">Возраст</string>
    <string name="ru_country">Страна</string>
    <string name="ru_gender">Пол</string>
    <string name="ru_relationship_status">Семейное Положение</string>
    <string name="ru_ethnicity">Этническая принадлежность</string>
    <string name="ru_faith">Вера</string>
    <string name="ru_smoke_status">Статус курения</string>
    <string name="ru_what_drink_status">Употребление Алкоголя</string>
    <string name="ru_do_you_want_kids">Хотите ли Вы детей</string>
    <string name="ru_do_you_have_kids">Есть ли у Вас дети</string>
    <string name="ru_looking_for">Ищите</string>
    <string name="ru_body_type">Телосложение</string>
    <string name="ru_number_of_kids">Количество детей</string>
    <string name="ru_christian">Православие</string>
    <string name="ru_muslim">Ислам</string>
    <string name="ru_atheist">Атеизм</string>
    <string name="ru_buddist">Буддизм</string>
    <string name="ru_adventist">Адвентизм</string>
    <string name="ru_never">Никогда</string>
    <string name="ru_no_value">Не указанно</string>
    <string name="cancel">Cancel</string>
    <string name="image">Image</string>
    <string name="age">Age</string>
    <string name="button_sign_filter">Filter...</string>
    <string name="menu_help">Help</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_view_provile">View Profile</string>
    <string name="gender">Gender</string>
    <string name="menu_get_more_visitors">Get More Visitors</string>
    <string name="default_text">Default</string>
    <string name="country">Country</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="faith">Faith</string>
    <string name="smoke_status">Smoke Status</string>
    <string name="how_often_do_you_drink">How Often Do You Drink Alcohol</string>
    <string name="do_you_want_kids">Do You Want Kids</string>
    <string name="do_you_have_kids">Do You Have Kids</string>
    <string name="looking_for">Looking for</string>
    <string name="body_type">Body Type</string>
    <string name="number_of_kids">Number Of Kids</string>
    <string name="header_necessary_info">Fill Necessary Info</string>
    <string name="what_gender">What is your gender?</string>
    <string name="privacy_policy">By clicking OK you are confirming that you are over the age of 18 and allow this app
        to use your information in accordance with <a href="http://ruswives.com/terms-and-privacy/">privacy policy</a></string>
    <string name="online_title">Online</string>
    <string name="search_title">Search</string>
    <string name="header_must_info">Fill your info</string>
    <string name="add_your_photo">Add your photo</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="where_are_you_from">Where are you from?</string>
    <string name="no_value">No value</string>
    <string name="default_lower_case">default</string>
    <string name="visitors">Visitors</string>
    <string name="likes">Likes</string>
    <string name="order_gender">Order your gender</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="sign_out">Log Out</string>
    <string name="send">Send</string>
    <string name="default_data">default</string>
    <string name="chats_title">Chats</string>
    <string name="actions_title">Actions</string>
    <string name="default_status">Default status</string>
    <string name="facebook_application_id" translatable="false">382050188909546</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb382050188909546</string>
    <string name="number_of_visitors_default">1</string>
    <string name="number_of_likes_default">1</string>
    <string name="about">About You</string>
    <string name="please_set_your_status">Set Your Status</string>
    <string name="your_gender">Your Gender</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="how_tall_are_you">How Tall Are You</string>
    <string name="set_your_height">Set Your Height</string>
    <string name="your_body_type">Your Body Type</string>
    <string name="set_your_body_type">Set Your Body Type</string>
    <string name="set_your_ethnicity">Set Your Ethnicity</string>
    <string name="which_best_ethnicities_best_describes_you">Which Best Ethnicities Best Describes You</string>
    <string name="what_faith">What is your faith?</string>
    <string name="set_your_faith">Set Your Faith</string>
    <string name="languages_you_can_speak">Languages You Can Speak</string>
    <string name="set_languages">Set Languages</string>
    <string name="smoking_status">Do you smoke?</string>
    <string name="select_your_smoke_status">Select Your Smoke Status</string>
    <string name="set_status">Set Status</string>
    <string name="do_you_smoke">Do You Smoke</string>
    <string name="set_the_answer">Set The Answer</string>
    <string name="how_many_kids_you_have">How Many Kids You Have</string>
    <string name="do_you_willing_kids">Do you want children?</string>
    <string name="your_hobby">Your Hobby</string>
    <string name="check_your_search_parameters">CHECK YOUR SEARCH PARAMETERS</string>
    <string name="you_may_also_like_them">You May Also Like Them</string>
    <string name="change_photo">Change photo</string>
    <string name="change">CHANGE</string>
    <string name="describe_who_are_you_looking_for">Describe who are you looking for?</string>
    <string name="save">Save</string>
    <string name="discribe_what_you_like_to_do_in_couple_words">Looking for...</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="edit">Edit</string>
    <string name="what_bodytype">What is your body type?</string>
    <string name="slender">Slender</string>
    <string name="about_average">About average</string>
    <string name="athletic">Athletic</string>
    <string name="heavyset">Heavyset</string>
    <string name="a_few_extra_pounds">A few extra pounds</string>
    <string name="stocky">Stocky</string>
    <string name="choose_languages_you_can_talk">Choose languages you can talk</string>
    <string name="add">Add</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="which_ethnicity_best_describe_you">Describe your ethnicity?</string>
    <string name="asian">Asian</string>
    <string name="black_african_descent">Black / African descent</string>
    <string name="east_indian">East Indian</string>
    <string name="latino_hispanic">Latino / Hispanic</string>
    <string name="native_american">Native American</string>
    <string name="white_caucasian">White / Caucasian</string>
    <string name="other">Other</string>
    <string name="christian">Christian</string>
    <string name="muslim">Muslim</string>
    <string name="atheist">Atheist</string>
    <string name="buddhist">Buddhist</string>
    <string name="adventist">Adventist</string>
    <string name="never">Never</string>
    <string name="social_drinker">Social drinker</string>
    <string name="moderately">Moderately</string>
    <string name="regularly">Regularly</string>
    <string name="no_way">No way</string>
    <string name="occasionally">Occasionally</string>
    <string name="daily">Daily</string>
    <string name="cigar_aficionado">Cigar aficionado</string>
    <string name="yes_but_trying_to_quit">Yes, but trying to quit</string>
    <string name="what_relationship_status">What is your relationship status?</string>
    <string name="never_married">Never married</string>
    <string name="currently_separated">Currently separated</string>
    <string name="divorced">Divorced</string>
    <string name="widow_widower">Widow / Widower</string>
    <string name="no">No</string>
    <string name="yes_they_sometimes_live_at_home">Yes, they sometimes live at home</string>
    <string name="yes_they_live_away_from_home">Yes, they live away from home</string>
    <string name="yes_they_live_at_home">Yes, they live at home</string>
    <string name="definitely">Definitely</string>
    <string name="someday">Someday</string>
    <string name="not_sure">Not sure</string>
    <string name="probably_not">Probably not</string>
    <string name="no_but_its_ok_if_partner_has_kids">No, but its OK if partner has kids</string>
    <string name="next_text">Next</string>
    <string name="emptyText">Nothing to show yet</string>
    <string name="emptyText_chats">No messages yet</string>
    <string name="emptyText_actions">No likes and visits yet</string>
    <string name="basic_info">Basic info</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="your_name_is_here">Your name is here…</string>
    <string name="apply">Apply</string>
    <string name="header_filters">Filter</string>
    <string name="what_ethnicity">What is your ethnicity?</string>
    <string name="what_smoke_status">What is your smoke status?</string>
    <string name="what_drink_status">What is your drink status?</string>
    <string name="where_live">Where do you live?</string>
    <string name="what_age">What is your age?</string>
    <string name="only_with_friends">Only with friends</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>
</resources>