<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_top_menu_support_item"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help_outline_black_24dp"/>
        <item
            android:id="@+id/drawer_top_menu_safety_item"
            android:title="@string/menu_privacy"
            android:icon="@drawable/ic_lock_outline_black_24dp"/>
        <item
            android:id="@+id/drawer_top_menu_logout_item"
            android:title="@string/menu_log_out"
            android:icon="@drawable/logout"/>

        <item
            android:id="@+id/drawer_top_menu_login_item"
            android:title="@string/menu_log_out"
            android:icon="@drawable/ic_person_add"/>
    </group>

</menu>