<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.borisruzanov.russianwives.ui.slider.SliderBodytypeFragment">

    <TextView
        android:id="@+id/fragment_slider_bodytype_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="36dp"
        android:text="@string/what_is_your_bodytype"
        android:textColor="@color/darkGrey"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/fragment_slider_bodytype_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_slider_bodytype_tv_question"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_slender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/slender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_average"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_athletic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/athletic"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_heavyset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heavyset"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_fewextra"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/a_few_extra_pounds"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/fragment_slider_bodytype_linear_stocky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stocky"
            android:textSize="20sp" />


    </RadioGroup>

    <Button
        android:id="@+id/fragment_slider_bodytype_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slider_bodytype_radiogroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />


</RelativeLayout>