<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.borisruzanov.russianwives.ui.slider.SliderSmokingStatusFragment">

    <TextView
        android:id="@+id/fragment_slider_smokestatus_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="36dp"
        android:text="@string/smoking_status"
        android:textColor="@color/darkGrey"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/fragment_slider_smokestatus_linear_tvs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_slider_smokestatus_tv_question"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/fragment_slider_smokine_status_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_slider_bodytype_tv_question"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fragment_slider_smoking_status_rbtn_no_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_way"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fragment_slider_smoking_status_rbtn_occasioally"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/occasionally"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fragment_slider_smoking_status_rbtn_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/daily"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fragment_slider_smokine_status_rbtn_cigar_aficionado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cigar_aficionado"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fragment_slider_smokine_status_rbtn_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/yes_but_trying_to_quit"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_slider_smokestatus_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slider_smokestatus_linear_tvs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />


</RelativeLayout>
