<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.borisruzanov.russianwives.ui.slider.SliderRalationshipsStatusFragment">

    <TextView
        android:id="@+id/fragment_slider_relationships_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp40"
        android:text="@string/what_is_your_relationship_status"
        android:textColor="@color/darkGrey"
        android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/fragment_slider_relationships_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_slider_relationships_tv_question"
            android:layout_margin="@dimen/dp16"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fragment_slider_rbtn_never_married"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/never_married"
                android:textSize="@dimen/answers_text_size" />

            <RadioButton
                android:id="@+id/fragment_slider_rbtn_separated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/currently_separated"
                android:textSize="@dimen/answers_text_size" />

            <RadioButton
                android:id="@+id/fragment_slider_rbtn_divorced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/divorced"
                android:textSize="@dimen/answers_text_size" />

            <RadioButton
                android:id="@+id/fragment_slider_rbtn_widow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/widow_widower"
                android:textSize="@dimen/answers_text_size" />
        </RadioGroup>

    <Button
        android:id="@+id/fragment_slider_relationships_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slider_relationships_radiogroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp12"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />


</RelativeLayout>
