<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_slider_name_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginVertical="36dp"
        android:text="@string/enter_your_name"
        android:textColor="@color/darkGrey"
        android:textSize="24sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/fragment_slider_name_et_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slider_name_tv_question"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/your_name_is_here"
        android:inputType="text" />

    <Button
        android:id="@+id/fragment_slider_name_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_slider_name_et_answer"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="36dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</RelativeLayout>